--- a/index.html
+++ b/index.html
@@ -4,18 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Planner</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/javascript/script.js">
+    <script> src="https://cdn.tailwindcss.com"</script>
 </head>
+
 <body>
-    <header>
+    <header class="text-3xl font-bold underline">
         <h1>Recipe Finder</h1>
         <p>Pick the ingredients you want to use</p>
     </header>
     <main>
-        <h2>Food</h2>
-        <form action="search">
-            <input type="text" placeholder="Search" name="search">
-            <button type="submit"></button>
-        </form>
+        <Section class="Food">
+            <h2>Food</h2>
+            <form action="search">
+                <input type="text" placeholder="Search" name="search">
+            </form>
+            <button type="submit">Search</button>
+        </Section>
+
+        <section class="drinks">
+            <h2>Drinks</h2>
+            <form action="search">
+                <input type="text" placeholder="Search" name="search">
+            </form>
+            <button type="submit">Search</button>
+        </section>
     </main>
     <aside>
         <h3>Recent Searches</h3>
@@ -24,6 +39,12 @@
         <div></div>
         <div></div>
     </aside>
-    
+    <footer>
+        <h3>Featured Recipes</h3>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </footer>
 </body>
 </html>
