--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Planner</title>
+    <link rel="stylesheet" href="https://cdn.tailwindcss.com">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/javascript/script.js">
-    <script> src="https://cdn.tailwindcss.com"</script>
 </head>
 
 <body>
@@ -19,20 +18,20 @@
     <main>
 
         <Section class="food">
-        <h2>Food</h2>
-        <form action="search">
-            <input type="text" placeholder="Search" name="search">
+            <h2>Food</h2>
+            <form action="search">
+                <input type="text" placeholder="Search" name="search">
             </form>
-        <button type="submit">Search</button>
-    </Section>
+            <button type="submit">Search</button>
+        </Section>
 
-    <section class="drinks">
-        <h2>Drinks</h2>
-        <form action="search">
-            <input type="text" placeholder="Search" name="search">
-        </form>
-        <button type="submit">Search</button>
-</section>
+        <section class="drinks">
+            <h2>Drinks</h2>
+            <form action="search">
+                <input type="text" placeholder="Search" name="search">
+            </form>
+            <button type="submit">Search</button>
+        </section>
     </main>
     <aside>
         <h3>Recent Searches</h3>
@@ -52,5 +51,7 @@
         <div></div>
         <div></div>
     </footer>
+    <script src="./script.js"></script>
 </body>
+
 </html>
