--- a/search-results.html
+++ b/search-results.html
@@ -17,8 +17,11 @@
         </section>
         <a href="index.html">Go Back</a>
         <section>
-            <h2>Showing results for <span></span></h2>
+            <ul id="results">Showing results for <span></span>
+            </ul>
         </section>
     </main>
+
+    <script src="./script.js"></script>
 </body>
 </html>
