trying to make js communicate to html files. Pusing to get everyone on the same version.

--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
 
         <Section class="food">
             <h2>Food</h2>
-            <form action="search">
-                <input type="text" placeholder="Search" name="search">
+            <form id="foodSubmit" action="search">
+                <input id="userInputFood" type="text" placeholder="Search" name="search">
+                <button type="submit">Search</button>
             </form>
-            <button type="submit">Search</button>
         </Section>
+
 
         <section class="drinks">
             <h2>Drinks</h2>
-            <form action="search">
+            <form id="drinkSubmit" action="search">
                 <input type="text" placeholder="Search" name="search">
+                <button type="submit">Search</button>
             </form>
-            <button type="submit">Search</button>
         </section>
     </main>
     <aside>
@@ -51,7 +52,7 @@
         <div></div>
         <div></div>
     </footer>
-    <script src="./script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
