--- a/search-results.html
+++ b/search-results.html
@@ -6,22 +6,14 @@
     <title>Results | Meal Planner</title>
 </head>
 <body>
-    
+    <header>Recipe Finder</header>
     <main>
-        <section>
-            <h1>Recipe Finder</h1>
-            <form action="search">
-                <input type="text" placeholder="Search" name="search">
-            </form>
-            <button type="submit">Search</button>
-        </section>
         <a href="index.html">Go Back</a>
-        <section>
-            <ul id="results">Showing results for <span></span>
-            </ul>
+        <section id="results">
+            
         </section>
     </main>
 
-    <script src="./script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
