communicate two pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <Section class="food">
             <h2>Food</h2>
-            <form id="foodSubmit" action="search">
+            <form id="foodSearch" action="search">
                 <input id="userInputFood" type="text" placeholder="Search" name="search">
                 <button type="submit">Search</button>
             </form>
