--- a/search-results.html
+++ b/search-results.html
@@ -14,6 +14,6 @@
         </section>
     </main>
 
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/results.js"></script>
 </body>
 </html>
