split search-results

--- a/food-results.html
+++ b/food-results.html
@@ -9,11 +9,11 @@
     <header>Recipe Finder</header>
     <main>
         <a href="index.html">Go Back</a>
-        <section id="results">
+        <section id="food-results">
             
         </section>
     </main>
 
-    <script src="assets/js/results.js"></script>
+    <script src="./assets/js/food-results.js"></script>
 </body>
 </html>
