--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         <section class="drinks">
             <h2>Drinks</h2>
-            <form id="drinkSubmit" action="search">
-                <input type="text" placeholder="Search" name="search">
+            <form id="drinkSearch" action="search">
+                <input id="userInputDrink" type="text" placeholder="Search" name="search">
                 <button type="submit">Search</button>
             </form>
         </section>
@@ -52,7 +52,7 @@
         <div></div>
         <div></div>
     </footer>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
