added picture but it won't let me find file.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="text-3xl font-bold underline">
+    <header class="text-3xl font-bold underline backgroundimg">
         <h1>Recipe Finder</h1>
         <p>Pick the ingredients you want to use</p>
     </header>
