local storage and saved searched implemented

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Planner</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdn.tailwindcss.com">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -21,6 +21,7 @@
             <h2>Food</h2>
             <form id="foodSearch" action="search">
                 <input id="userInputFood" type="text" placeholder="Search" name="search">
+                <span id="foodError" class="error-message"></span>
                 <button type="submit">Search</button>
             </form>
         </Section>
@@ -30,27 +31,22 @@
             <h2>Drinks</h2>
             <form id="drinkSearch" action="search">
                 <input id="userInputDrink" type="text" placeholder="Search" name="search">
+                <span id="drinkError" class="error-message"></span>
                 <button type="submit">Search</button>
             </form>
         </section>
     </main>
     <aside>
-        <h3>Recent Searches</h3>
-        <section class="recentbuttons">
-            <button type="submit">Search</button>
-            <button type="submit">Search</button>
+        <h3>Recent Food Searches</h3>
+        <section class="recentFoodButtons">
+            <!-- Recent food search buttons will appear here -->
         </section>
-        <section class="recentbuttons2">
-            <button type="submit">Search</button>
-            <button type="submit">Search</button>
+        <h3>Recent Drink Searches</h3>
+        <section class="recentDrinkButtons">
+            <!-- Recent drink search buttons will appear here -->
         </section>
     </aside>
     <footer>
-        <h3>Featured Recipes</h3>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
     </footer>
     <script src="./assets/js/script.js"></script>
 </body>
