pull down aip info from second call

--- a/food-results.html
+++ b/food-results.html
@@ -12,6 +12,7 @@
         <section id="food-results">
             
         </section>
+     <div id="recipeCard"></div>
     </main>
 
     <script src="./assets/js/food-results.js"></script>
