--- a/drink-results.html
+++ b/drink-results.html
@@ -12,6 +12,7 @@
         <section id="drink-results">
             
         </section>
+        <div id="recipeCard"></div>
     </main>
 
     <script src="./assets/js/drink-results.js"></script>
