added styles to html and java

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Planner</title>
-    <link rel="stylesheet" href="https://cdn.tailwindcss.com">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -22,7 +22,7 @@
             <form id="foodSearch" action="search">
                 <input id="userInputFood" type="text" placeholder="Search" name="search">
                 <span id="foodError" class="error-message"></span>
-                <button type="submit">Search</button>
+                <button type="submit" class="button is-dark is-small">Search</button>
             </form>
         </Section>
 
@@ -32,7 +32,7 @@
             <form id="drinkSearch" action="search">
                 <input id="userInputDrink" type="text" placeholder="Search" name="search">
                 <span id="drinkError" class="error-message"></span>
-                <button type="submit">Search</button>
+                <button type="submit" class="button is-dark is-small">Search</button>
             </form>
         </section>
     </main>
