adding css to htmlfiles

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
+    <div class="banner"><img src="./assets/Recipe Finder (Billboard (Landscape)).png"
+        alt="bannder reading what's for dinner the recipe finder for busy coding bootcamp students."></div>
     <header class="text-3xl font-bold underline">
-        <h1>Recipe Finder</h1>
-        <p>Pick the ingredients you want to use</p>
+        <p>Enter an ingredient you'd like to use in the appropreate seach bar; then, click search for a list of recipies with that ingredient.</p>
     </header>
     <main>
 
