--- a/food-results.html
+++ b/food-results.html
@@ -6,7 +6,8 @@
     <title>Results | Meal Planner</title>
 </head>
 <body>
-    <header>Recipe Finder</header>
+    <img src="./assets/Recipe Finder (Billboard (Landscape)).png" alt="bannder reading what's for dinner the recipe finder for busy coding bootcamp students.">
+    <header></header>
     <main>
         <a href="index.html">Go Back</a>
         <section id="food-results">
