--- a/drink-results.html
+++ b/drink-results.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Results | Meal Planner</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
     <header>Recipe Finder</header>
     <main>
-        <a href="index.html">Go Back</a>
+        <a href="index.html" class="button is-dark is-small is-rounded">Go Back</a>
         <section id="drink-results">
             
         </section>
