--- a/index.html
+++ b/index.html
@@ -1,55 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meal Planner</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
 
-<body>
-    <div class="banner"><img src="./assets/Recipe Finder (Billboard (Landscape)).png"
-        alt="bannder reading what's for dinner the recipe finder for busy coding bootcamp students."></div>
-    <header class="text-3xl font-bold underline">
-        <p>Enter an ingredient you'd like to use in the appropreate seach bar; then, click search for a list of recipies with that ingredient.</p>
+  <body>
+    <div class="banner">
+      <img
+        src="./assets/Recipe Finder (Billboard (Landscape)).png"
+        alt="bannder reading what's for dinner the recipe finder for busy coding bootcamp students."
+      />
+    </div>
+
+    <header class="text-3xl font-bold underline p-4">
+      <p>
+        Enter an ingredient you'd like to use in the appropreate seach bar;
+        then, click search for a list of recipies with that ingredient.
+      </p>
     </header>
-    <main>
 
-        <Section class="food">
-            <h2>Food</h2>
-            <form id="foodSearch" action="search">
-                <input id="userInputFood" type="text" placeholder="Search" name="search">
-                <span id="foodError" class="error-message"></span>
-                <button type="submit" class="button is-dark is-small">Search</button>
-            </form>
-        </Section>
+<main class="container">
+  <div class="columns is-centered">
+    <div class="column is-10-mobile is-4-desktop">
+      <section class="food box">
+        <h2 class="title has-text-centered">Food</h2>
+        <form id="foodSearch" action="search">
+          <div class="field">
+            <div class="control">
+              <input id="userInputFood" class="input" type="text" placeholder="Search" name="search">
+            </div>
+          </div>
+          <div class="field">
+            <div class="control">
+              <button type="submit" class="button is-dark is-fullwidth">Search</button>
+            </div>
+          </div>
+          <p id="foodError" class="help is-danger"></p>
+        </form>
+      </section>
+    </div>
+    <div class="column is-10-mobile is-4-desktop">
+      <section class="drinks box">
+        <h2 class="title has-text-centered">Drinks</h2>
+        <form id="drinkSearch" action="search">
+          <div class="field">
+            <div class="control">
+              <input id="userInputDrink" class="input" type="text" placeholder="Search" name="search">
+            </div>
+          </div>
+          <div class="field">
+            <div class="control">
+              <button type="submit" class="button is-dark is-fullwidth">Search</button>
+            </div>
+          </div>
+          <p id="drinkError" class="help is-danger"></p>
+        </form>
+      </section>
+    </div>
+  </div>
+</main>
 
-
-        <section class="drinks">
-            <h2>Drinks</h2>
-            <form id="drinkSearch" action="search">
-                <input id="userInputDrink" type="text" placeholder="Search" name="search">
-                <span id="drinkError" class="error-message"></span>
-                <button type="submit" class="button is-dark is-small">Search</button>
-            </form>
-        </section>
-    </main>
     <aside>
-        <h3>Recent Food Searches</h3>
-        <section class="recentFoodButtons">
-            <!-- Recent food search buttons will appear here -->
-        </section>
-        <h3>Recent Drink Searches</h3>
-        <section class="recentDrinkButtons">
-            <!-- Recent drink search buttons will appear here -->
-        </section>
+      <h3>Recent Food Searches</h3>
+      <section class="recentFoodButtons">
+        <!-- Recent food search buttons will appear here -->
+      </section>
+      <h3>Recent Drink Searches</h3>
+      <section class="recentDrinkButtons">
+        <!-- Recent drink search buttons will appear here -->
+      </section>
     </aside>
-    <footer>
-    </footer>
-    <script src="./assets/js/script.js"></script>
-</body>
 
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
