--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </header>
 
 <main class="container">
-  <div class="columns is-centered">
-    <div class="column is-10-mobile is-4-desktop">
+  <div class="columns is-centered is-multiline">
+    <div class="column is-12-mobile is-10-tablet is-5-desktop">
       <section class="food box">
         <h2 class="title has-text-centered">Food</h2>
         <form id="foodSearch" action="search">
@@ -47,7 +47,7 @@
         </form>
       </section>
     </div>
-    <div class="column is-10-mobile is-4-desktop">
+    <div class="column is-12-mobile is-10-tablet is-5-desktop">
       <section class="drinks box">
         <h2 class="title has-text-centered">Drinks</h2>
         <form id="drinkSearch" action="search">
@@ -58,7 +58,7 @@
           </div>
           <div class="field">
             <div class="control">
-              <button type="submit" class="button is-dark is-fullwidth">Search</button>
+              <button type="submit" class="button is-dark is-fullwidth is-rounded">Search</button>
             </div>
           </div>
           <p id="drinkError" class="help is-danger"></p>
@@ -67,6 +67,7 @@
     </div>
   </div>
 </main>
+
 
     <aside>
       <h3>Recent Food Searches</h3>
