--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     id="userInputFood"
                     class="input"
                     type="text"
-                    placeholder="Search"
+                    placeholder="Search by ingredient"
                     name="search"
                   />
                 </div>
@@ -69,7 +69,7 @@
                     id="userInputDrink"
                     class="input"
                     type="text"
-                    placeholder="Search"
+                    placeholder="Search by ingredient"
                     name="search"
                   />
                 </div>
